# smiletrack-rs

./: .gitignore  Cargo.toml  annotations.json  build.rs  config.json  convert_model.py  convert_model_fix.py  note.md  setup_test_images.sh
.githooks/: pre-commit
output_frames/: detections.json  tracking_details.json
src/: config.rs  detection.rs  kalman_filter.rs  lib.rs  main.rs  simple_detector.rs  track.rs  tracker.rs  utils.rs  visualization.rs
