[package]
name = "smiletrack"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
opencv = "0.94.4"
tch = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.32"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
lap = "0.1.0"
num-traits = "0.2.19"

[lib]
path = "src/lib.rs"

[[bin]]
name = "smiletrack"
path = "src/bin/smiletrack.rs"

[dev-dependencies]
approx = "0.5"           # for float comparisons in tests
